--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,5 +1,5 @@
 :root {
-    --font-family-main: Consolas, "Times New Roman", Serif;
+    --font-family-main: Consolas, 'Times New Roman', Serif;
 
     --font-size-m: 16px;
     --font-line-m: 24px;
@@ -11,4 +11,7 @@
 
     // Размеры
     --navbar-height: 50px;
+
+    --sidebar-width: 300px;
+    --sidebar-width-collapsed: 80px;
 }
