--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,7 +2,7 @@
 @import 'variables/global';
 @import 'themes/normal';
 @import 'themes/dark';
-
+//TODO пересмотреть 31 урок с темами
 body {
     font: var(--font-m);
     color: var(--primary-color);
