--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,6 +1,6 @@
 .Button {
     cursor: pointer;
-    color: var(--secondary-color);
+    color: var(--inverted-secondary-color);
     padding: 6px 15px;
 }
 
@@ -16,11 +16,11 @@
     border: none;
     background: none;
     outline: none;
-    color: var(--inverted-primary-color);
+    color: var(--inverted-secondary-color);
 }
 
 .outline {
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--secondary-color);
     color: var(--primary-color);
     background: none;
 }
@@ -33,7 +33,7 @@
 
 .backgroundInverted {
     background: var(--inverted-bg-color);
-    color: var(--inverted-primary-color);
+    color: var(--inverted-secondary-color);
     border: none;
 }
 
