--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,9 +1,10 @@
-@import 'reset';
-@import 'variables/global';
-@import 'themes/normal';
-@import 'themes/dark';
-//TODO пересмотреть 31 урок с темами
-body {
+@import "reset";
+@import "variables/global";
+@import "themes/normal";
+@import "themes/dark";
+
+.app,
+.app_modal {
     font: var(--font-m);
     color: var(--primary-color);
 }
